# tx8

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  Makefile  README.md  premake5.lua
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  test.yml
assembler/: .gitignore  Makefile  compile_flags.txt
assembler/src/: asm_types.c  asm_types.h  assembler.c  assembler.h  main.c  tx8.l  tx8.y
include/tx8/asm/: assembler.h  assembler.hpp  lexer.hpp  parser.hpp  types.h
include/tx8/core/: cpu.h  cpu.hpp  debug.h  debug.hpp  gpu.hpp  instruction.h  instruction.hpp  log.h  log.hpp  stdlib.h  stdlib.hpp  types.h  types.hpp  util.h  util.hpp
spec/: spec.md  tx8_asm_language.md
src/: cpu.c  cpu.h  debug.c  debug.h  instruction.h  types.h
src/asm/: assembler.c  assembler.cpp  lexer.cpp  main.c  parser.cpp  tx8.l  tx8.y  types.c  types.cpp
src/cli/: main.cpp
src/core/: cpu.c  cpu.cpp  debug.c  debug.cpp  gpu.cpp  instruction.cpp  log.c  log.cpp  stdlib.c  stdlib.cpp  util.cpp
test/: VMTest.cpp  VMTest.hpp  arithmetic_test.cpp  bitwise_operations_test.cpp  float_arithmetic_test.cpp  hello-world.tx8  integration_test.cpp  main.c  main.cpp  misc_test.cpp  miscellaneous_test.cpp  signed_arithmetic_test.cpp  small_registers_test.cpp  test.tx8  unsigned_arithmetic_test.cpp  util_test.cpp
